# edu_image_compressor

./: CMakeLists.txt  README.md  make_plots.py  test_and_profile  test_performance.sh
src/: bmp.cpp  bmp.h  bwt.cpp  bwt.h  cli.cpp  cli.h  entity.h  main.cpp  profiler.cpp  profiler.h  rle.cpp  rle.h  sort.cpp  sort.h
